--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <nav class="navbar">
             <div class="logo">
                 <!-- <ul style="list-style:none;">    -->
-                <img src="img/flipkart-plus_8d85f4.png" alt="">
+                <a href="index.html"><img  src="img/flipkart-plus_8d85f4.png" alt=""></a>
                 <p id="explore"><a style=" color:yellow;
-                    font-size: 12px; font-style: italic;" class="font" href="#">Explore Plus</a></p>
+                    font-size: 12px; font-style: italic;" class="font" href="https://www.flipkart.com/plus">Explore Plus</a></p>
 
             </div>
             <div class="button">
@@ -46,7 +46,7 @@
             <div style=" margin-left: 10vw;  " class="one"><a href="#">
                     <ul class="liststyle">
                         <li>
-                            <a><img class="img2" src="img/one.webp" alt=""></a>
+                            <a href="#"><img class="img2" src="img/one.webp" alt=""></a>
                         </li>
                         <li>
                             <a class="font">Top Offers</a>
@@ -137,7 +137,23 @@
         <div>
         </div>
         <div   class="banner">
-        
+
+        </div>
+        <div class="electronics">
+             <div class="view-all">
+                <p>BEST OF ELECTRONICS</p>
+                <button>View All</button>
+             </div>
+        </div>
+        <div class="sub-electro">
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            
         </div>
     </main>
     <footer>
