--- a/index.html
+++ b/index.html
@@ -137,7 +137,6 @@
         <div>
         </div>
         <div   class="banner">
-
         </div>
         <div class="electronics">
              <div class="view-all">
@@ -146,15 +145,30 @@
              </div>
         </div>
         <div class="sub-electro">
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
+            <div class="border">
+                <img src="img/camera.webp" alt="">
+            </div>
+            <div class="border"> 
+                <img src="img/laptop.webp" alt="">
+            </div>
+            <div class="border"> 
+                <img src="img/moniter.webp" alt="">
+            </div>
+            <div class="border"> 
+                <img src="img/projector.webp" alt="">
+            </div>
+            <div class="border"> 
+                <img src="img/printer.webp" alt="">
+            </div>
+            <div class="border">
+                <img src="img/printer1.webp" alt="">
+            </div>
+            <div class="border">
+                <img src="img/moniter1.webp" alt="">
+            </div>
             
         </div>
+    
     </main>
     <footer>
 
